--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/static/images/stor_logo_2-removebg-preview.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://res.cloudinary.com/ddjyrgtaw/image/upload/v1737742655/stor_logo_2-removebg-preview_ix7obo.png" type="image/x-icon">
     <title>Stork Text Utils</title>
     {% load static %}
     <link rel="stylesheet" href="H:\django\textutils\static\style.css">
@@ -21,7 +21,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark border-bottom border-body" data-bs-theme="dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/home"><img src="/static/images/storklogo2.0.png" width="60"
+            <a class="navbar-brand" href="/home"><img src="https://res.cloudinary.com/ddjyrgtaw/image/upload/v1737742945/stork_logo-removebg-preview_vxpfhs.png" width="60"
                     height="60">TextUtils</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -111,7 +111,7 @@
                     <div class="col-12 col-md-4 col-lg-3 col-xl-2">
                         <div class="widget">
                             <a href="#">
-                                <img src="/static/images/stor_logo_2-removebg-preview.png" alt="Stork" width="175" height="auto">
+                                <img src="https://res.cloudinary.com/ddjyrgtaw/image/upload/v1737742655/stor_logo_2-removebg-preview_ix7obo.png" alt="Stork" width="175" height="auto">
                             </a>
                         </div>
                     </div>
