--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="https://res.cloudinary.com/ddjyrgtaw/image/upload/v1737742655/stor_logo_2-removebg-preview_ix7obo.png" type="image/x-icon">
     <title>Stork Text Utils</title>
     {% load static %}
-    <link rel="stylesheet" href="H:\django\textutils\static\style.css">
+    <link rel="stylesheet" href="static/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
