--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                     <a href="/aboutus" class="link-secondary text-decoration-none">About</a>
                                 </li>
                                 <li class="mb-2">
-                                    <a href="https://dishant-hooda.github.io/portfolio/" class="link-secondary text-decoration-none">Portfolio</a>
+                                    <a href="https://portfolio-mu-weld-30.vercel.app/" class="link-secondary text-decoration-none">Portfolio</a>
                                 </li>
                     
                             </ul>
